--- a/index.html
+++ b/index.html
@@ -1,7 +1,21 @@
 <!DOCTYPE html>
  <html>
   <head>
+   <script src="https://www.gstatic.com/firebasejs/3.7.0/firebase.js"></script>
+   <script>
+    var config = {
+     apiKey: "AIzaSyCQw5l7W-r1aBt_1n9dePGpXj-FgmyDSq8",
+     authDomain: "evergenco-93c31.firebaseapp.com",
+     databaseURL: "https://evergenco-93c31.firebaseio.com",
+     storageBucket: "evergenco-93c31.appspot.com",
+     messagingSenderId: "657664211832"
+    };
+    firebase.initializeApp(config);
+   </script>
+   <title>EverGenCo</title>
+   <style>
+   </style>
   </head>
-  <title>
-  </title>
+  <body>
+  </body>
  </html>
