--- a/Software/CryptoCurrent/GenCoin/index.html
+++ b/Software/CryptoCurrent/GenCoin/index.html
@@ -26,11 +26,11 @@
     <form>
      <div class="input-group">
       <span class="input-group-addon"><i class="glyphicon glyphicon-list-alt"></i></span>
-      <input id="reg" type="button" class="form-control" name="Register" placeHolder="Register" onclick="gotoRA()">
+      <input id="reg" type="button" class="form-control" value="Register" name="Register" placeHolder="Register" onclick="gotoRA()">
      </div>
      <div class="input-group">
       <span class="input-group-addon"><i class="glyphicon glyphicon-log-in"></i></span>
-      <input id="log" type="button" class="form-control" name="Log In" placeholder="Log In" onclick="gotoLI()">
+      <input id="log" type="button" class="form-control" value="Log In" name="Log In" placeholder="Log In" onclick="gotoLI()">
      </div>
     </form>
    </div>
