--- a/Software/CryptoCurrent/GenCoin/register.html
+++ b/Software/CryptoCurrent/GenCoin/register.html
@@ -22,15 +22,17 @@
    </style>
   </head>
   <body>
-   <form>
-    <div class="input-group col-xs-3">
-     <span class="input-group-addon"><i class="glyphicon glyphicon-envelope"></i></span>
-     <input id="em" type="text" class="form-control" name="email" placeholder="E-Mail">
-    </div>
-    <div class="input-group col-xs-3">
-     <span class="input-group--addon"><i class="glypicon glyphicon-lock"></i></span>
-     <input id="pw" type="text" class="form-control" name="password" placeholder="Password">
-    </div>
-   </form>
+   <div align="center">
+    <form>
+     <div class="input-group col-xs-3">
+      <span class="input-group-addon"><i class="glyphicon glyphicon-envelope"></i></span>
+      <input id="em" type="text" class="form-control" name="email" placeholder="E-Mail">
+     </div>
+     <div class="input-group col-xs-3">
+      <span class="input-group-addon"><i class="glyphicon glyphicon-lock"></i></span>
+      <input id="pw" type="text" class="form-control" name="password" placeholder="Password">
+     </div>
+    </form>
+   </div>
   </body>
  </html>
