--- a/Software/CryptoCurrent/GenCoin/register.html
+++ b/Software/CryptoCurrent/GenCoin/register.html
@@ -44,6 +44,7 @@
      firebase.auth().createUserWithEmailAndPassword(email, pass).catch(function(error){
       var errorCode = error.code;
       var errorMessage = error.message;
+      document.body.innerHTML += email;
       if(errorCode === "auth/invalid-email"){
        alert("The email entered is not valid");
       }else{
