--- a/Software/CryptoCurrent/GenCoin/register.html
+++ b/Software/CryptoCurrent/GenCoin/register.html
@@ -44,21 +44,7 @@
      firebase.auth().createUserWithEmailAndPassword(email, pass).catch(function(error){
       var errorCode = error.code;
       var errorMessage = error.message;
-      if(errorCode === "auth/invalid-email"){
-       alert("The email entered is not valid");
-      }else{
-       if(errorCode === "auth/email-already-in-use"){
-        alert("The email entered is already registered");
-       }else{
-        if(errorCode === "auth/weak-password"){
-         alert("The password entered is to simple.");
-        }else{
-         if(errorCode === "null"){
-          reAccComp();
-         }
-        }
-       }
-      }
+      alert(errorCode+" : "+errorMessage);
      });
      document.getElementById("em").value = "";document.getElementById("pw").value = "";
     }
