--- a/Software/CryptoCurrent/GenCoin/register.html
+++ b/Software/CryptoCurrent/GenCoin/register.html
@@ -44,7 +44,13 @@
      firebase.auth().createUserWithEmailAndPassword(email, pass).catch(function(error){
       var errorCode = error.code;
       var errorMessage = error.message;
-      alert(errorCode+" : "+errorMessage);
+      if(errorCode.match(/[a-zA-Z]/g)==true){
+        alert(errorCode+" : "+errorMessage);
+      }else{
+       if(errorCode == null){
+        reAccComp();
+       }
+      }
      });
      document.getElementById("em").value = "";document.getElementById("pw").value = "";
     }
