--- a/index.html
+++ b/index.html
@@ -36,6 +36,10 @@
       }
       console.log(error);
      });
+     writeData(mail);
+    }
+    function writeData(mail){
+     var data = firebase.database();
     }
    </script>
   </body>
