--- a/index.html
+++ b/index.html
@@ -2,9 +2,17 @@
  <html>
   <head>
    <title>EverGenCo</title>
-   <link rel="stylesheet" href="https://maxcdn.bootsrtapcdn.com/bootstrap/3.3.7/css/bootstrap.min.css">
-   <script 
+   <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.7/css/bootstrap.min.css">
+   <script type="text/javascript" src="https://ajax.googleapis.com/ajax/libs/jquery/3.1.1/jquery.min.js"></script>
+   <script type="text/javascript" src="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.7/js/bootstrap.min.js"></script>
+   <style>
+    body{ font-family:Helvetica; }
+   </style>
   </head>
   <body>
+   <div class="container">
+    <div class="jumbotron">
+    </div>
+   </div>
   </body>
  </html>
