--- a/index.html
+++ b/index.html
@@ -7,11 +7,21 @@
    <script type="text/javascript" src="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.7/js/bootstrap.min.js"></script>
    <style>
     body{ font-family:Helvetica; }
+    .il li{ display:inline; }
    </style>
   </head>
   <body>
-   <div class="container">
-    <div class="jumbotron">
+   <div class="jumbtron">
+    <div class="container">
+     <div class="page-header text-center">
+      <ul>
+       <font size="12">
+        <li><font color="#00FFFF">Ever</font></li>
+        <li><font color="#FFAA00">Gen</font></li>
+        <li><font color="#00FF00">Co</font></li>
+       </font>
+      </ul>
+     </div>
     </div>
    </div>
   </body>
