--- a/index.html
+++ b/index.html
@@ -7,14 +7,14 @@
    <script type="text/javascript" src="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.7/js/bootstrap.min.js"></script>
    <style>
     body{ font-family:Helvetica; }
-    .il li{ display:inline; }
+    ul.il li{ display:inline;list-style-type:none; }
    </style>
   </head>
   <body>
    <div class="jumbtron">
     <div class="container">
      <div class="page-header text-center">
-      <ul>
+      <ul class="il">
        <font size="12">
         <li><font color="#00FFFF">Ever</font></li>
         <li><font color="#FFAA00">Gen</font></li>
