--- a/index.html
+++ b/index.html
@@ -22,6 +22,21 @@
        </font>
       </ul>
      </div>
+     <nav class="navbar navbar-default navbar-fixed-top">
+      <div class="container-fluid">
+       <div class="navbar-header">
+        <a class="navbar-brand" href="https://evergenco.github.io/Business">
+         <ul class="il">
+          <font size="8">
+           <li><font color="#00FFFF">Ever</font></li>
+           <li><font color="#FFAA00">Gen</font></li>
+           <li><font color="#00FF00">Co</font></li>
+          </font>
+         </ul>
+        </a>
+       </div>
+      </div>
+     </nav>
     </div>
    </div>
   </body>
