--- a/accountGate.html
+++ b/accountGate.html
@@ -1,7 +1,28 @@
 <DOCTYPE! html>
  <html>
   <head>
+   <title>AccountGate | EGC</title>
+   <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.7/css/bootstrap.min.css">
+   <script type="text/javascript" src="https://ajax.googleapis.com/ajax/libs/jquery/3.1.1/jquery.min.js"></script>
+   <script type="text/javascript" src="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.7/js/bootstrap.min.js"></script>
+   <style>
+    body{ font-family:Helvetica; }
+    ul.il li{ display:inline;list-style-type:none; }
+   </style>
   </head>
   <body>
+   <div class="jumbotron">
+    <div class="container">
+     <div class="page-header text-center">
+      <ul class="il">
+       <font size="12">
+        <li><font color="#00FFFF">Ever</font></li>
+        <li><font color="#FFAA00">Gen</font></li>
+        <li><font color="#00FF00">Co</font></li>
+       </font>
+      </ul>
+     </div>
+    </div>
+   </div>
   </body>
  </html>
