--- a/accountGate.html
+++ b/accountGate.html
@@ -23,6 +23,24 @@
       </ul>
      </div>
     </div>
+    <div class="container">
+     <div class="col-xs-3">
+      <span class="input-group-addon"><i class="glyphicon glyphicon-user"></i></span>
+      <input class="form-control" type="button" value="LogIn" onclick="logIn()" />
+     </div>
+     <div class="col-xs-3">
+      <span class="input-group-addon"><i class="glyphicon glyphicon-pencil"></i></span>
+      <input class="form-control" type="button" value="Register" onclick="signUp()" />
+     </div>
+    </div>
    </div>
+   <script type="text/javascript">
+    function logIn(){
+     window.location = "https://evergenco.github.io/Business/Account/logIn.html";
+    }
+    function signUp(){
+     window.location = "https://evergenco.github.io/Business/Account/signUp.html";
+    }
+   </script>
   </body>
  </html>
