--- a/accountGate.html
+++ b/accountGate.html
@@ -36,6 +36,8 @@
    </div>
    <script type="text/javascript">
     function logIn(){
+     var from = window.location.substring();
+     alert(from);
      window.location = "https://evergenco.github.io/Business/Account/logIn.html";
     }
     function signUp(){
