--- a/accountGate.html
+++ b/accountGate.html
@@ -28,7 +28,7 @@
       <span class="input-group-addon"><i class="glyphicon glyphicon-user"></i></span>
       <input class="form-control" type="button" value="LogIn" onclick="logIn()" />
      </div>
-     <font size="12">-   or   -</font>
+     <div class="col-xs-3"><font size="12">-   or   -</font></div>
      <div class="col-xs-3">
       <span class="input-group-addon"><i class="glyphicon glyphicon-pencil"></i></span>
       <input class="form-control" type="button" value="Register" onclick="signUp()" />
