--- a/accountGate.html
+++ b/accountGate.html
@@ -12,7 +12,7 @@
   </head>
   <body>
    <div class="jumbotron">
-    <div class="container">
+    <div class="container-fluid">
      <div class="page-header text-center">
       <ul class="il">
        <font size="12">
