--- a/accountGate.html
+++ b/accountGate.html
@@ -23,7 +23,7 @@
       </ul>
      </div>
     </div>
-    <div class="container" align="center">
+    <div class="container-fluid" align="center">
      <div class="col-xs-3">
       <span class="input-group-addon"><i class="glyphicon glyphicon-user"></i></span>
       <input class="form-control" type="button" value="LogIn" onclick="logIn()" />
