--- a/accountGate.html
+++ b/accountGate.html
@@ -22,15 +22,17 @@
        </font>
       </ul>
      </div>
-     <div class="col-xs-3">
-      <span class="input-group-addon"><i class="glyphicon glyphicon-user"></i></span>
-      <input class="form-control" type="button" value="LogIn" onclick="logIn()" />
-     </div>
-     <div class="col-xs-3"><font size="12">-   or   -</font></div>
-     <div class="col-xs-3">
-      <span class="input-group-addon"><i class="glyphicon glyphicon-pencil"></i></span>
-      <input class="form-control" type="button" value="Register" onclick="signUp()" />
-     </div>
+    </div>
+   </div>
+   <div align="center">
+    <div class="col-xs-3">
+     <span class="input-group-addon"><i class="glyphicon glyphicon-user"></i></span>
+     <input class="form-control" type="button" value="LogIn" onclick="logIn()" />
+    </div>
+    <div class="col-xs-3"><font size="12">-   or   -</font></div>
+    <div class="col-xs-3">
+     <span class="input-group-addon"><i class="glyphicon glyphicon-pencil"></i></span>
+     <input class="form-control" type="button" value="Register" onclick="signUp()" />
     </div>
    </div>
    <script type="text/javascript">
