--- a/accountGate.html
+++ b/accountGate.html
@@ -38,8 +38,7 @@
    <script type="text/javascript">
     function logIn(){
      var from = window.location.substring();
-     alert(from);
-     window.location = "https://evergenco.github.io/Business/Account/logIn.html";
+     document.body.innerHTML += from;
     }
     function signUp(){
      window.location = "https://evergenco.github.io/Business/Account/signUp.html";
