--- a/accountGate.html
+++ b/accountGate.html
@@ -37,7 +37,7 @@
    </div>
    <script type="text/javascript">
     function logIn(){
-     var from = window.location.substring();
+     var from = window.location.search();
      document.body.innerHTML += from;
     }
     function signUp(){
