--- a/accountGate.html
+++ b/accountGate.html
@@ -38,7 +38,8 @@
    <script type="text/javascript">
     function logIn(){
      var from = window.location.search;
-     document.body.innerHTML += from;
+     var res = from.substring().replace("?", "");
+     document.body.innerHTML += res;
     }
     function signUp(){
      window.location = "https://evergenco.github.io/Business/Account/signUp.html";
