--- a/accountGate.html
+++ b/accountGate.html
@@ -44,7 +44,7 @@
     function signUp(){
      var from = window.location.search;
      var res = from.substring().replace("?", "");
-     window.location = "https://evergenco.github.io/Business/Account/signUp.html"+res;
+     window.location = "https://evergenco.github.io/Business/Account/signUp.html?"+res;
     }
    </script>
   </body>
