--- a/Account/signUp.html
+++ b/Account/signUp.html
@@ -1,7 +1,38 @@
 <DOCTYPE! html>
  <html>
   <head>
+   <title>Sign Up | EGC</title>
+   <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.7/css/bootstrap.min.css">
+   <script type="text/javascript" src="https://ajax.googleapis.com/ajax/libs/jquery/3.1.1/jquery.min.js"></script>
+   <script type="text/javascript" src="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.7/js/boostrap.min.js"></script>
+   <style>
+    body{ font-family:Helvetica; }
+    ul.il li{ display:inline;list-style-type:none; }
+   </style>
   </head>
   <body>
+   <div id="divBody">
+    <div class="input-group">
+     <span class="input-group-addon"><i class="glyphicon glyphicon-user"></i></span>
+     <input class="form-control" type="text" id="UserName" placeholder="UserName">
+    </div>
+    <div class="input-group">
+     <span class="input-group-addon"><i class="glypicon glyphicon-lock"></i></span>
+     <input class="form-control" type="text" id="Password" placeholder="Password">
+    </div>
+    <div class="input-group">
+     <input class="form-control" type="text" id="EMail" placeholder="E-Mail">
+    </div>
+    <div class="input-group">
+     <input class="form-control" type="text" id="FullName" placeholder="Full Name">
+    </div>
+    <div class="input-group">
+     <span class="input-group-addon"><i class="glyphicon glyphicon-pencil"></i></span>
+     <input class="form-control" type="text" value="SignUp">
+    </div>
+   </div>
+   <script type="text/javascript">
+    
+   </script>
   </body>
  </html>
