--- a/Account/signUp.html
+++ b/Account/signUp.html
@@ -11,14 +11,18 @@
    </style>
   </head>
   <body>
-   <div id="divBody">
+   <div id="divBody" align="center">
     <div class="input-group">
      <span class="input-group-addon"><i class="glyphicon glyphicon-user"></i></span>
-     <input class="form-control" type="text" id="UserName" placeholder="UserName">
+     <div class="col-xs-2">
+      <input class="form-control" type="text" id="UserName" placeholder="UserName">
+     </div>
     </div>
     <div class="input-group">
      <span class="input-group-addon"><i class="glypicon glyphicon-lock"></i></span>
-     <input class="form-control" type="text" id="Password" placeholder="Password">
+     <div class="col-xs-2">
+      <input class="form-control" type="text" id="Password" placeholder="Password">
+     </div>
     </div>
     <div class="input-group">
      <input class="form-control" type="text" id="EMail" placeholder="E-Mail">
@@ -28,7 +32,9 @@
     </div>
     <div class="input-group">
      <span class="input-group-addon"><i class="glyphicon glyphicon-pencil"></i></span>
-     <input class="form-control" type="text" value="SignUp">
+     <div class="col-xs-2">
+      <input class="form-control" type="button" value="SignUp" onclick="signUp()">
+     </div>
     </div>
    </div>
    <script type="text/javascript">
