--- a/Account/signUp.html
+++ b/Account/signUp.html
@@ -12,29 +12,23 @@
   </head>
   <body>
    <div id="divBody" align="center">
-    <div class="input-group">
+    <div class="input-group col-xs-3">
      <span class="input-group-addon"><i class="glyphicon glyphicon-user"></i></span>
-     <div class="col-xs-2">
-      <input class="form-control" type="text" id="UserName" placeholder="UserName">
-     </div>
+     <input class="form-control" type="text" id="UserName" placeholder="UserName">
     </div>
-    <div class="input-group">
+    <div class="input-group col-xs-3">
      <span class="input-group-addon"><i class="glypicon glyphicon-lock"></i></span>
-     <div class="col-xs-2">
-      <input class="form-control" type="text" id="Password" placeholder="Password">
-     </div>
+     <input class="form-control" type="text" id="Password" placeholder="Password">
     </div>
-    <div class="input-group">
+    <div class="input-group col-xs-3">
      <input class="form-control" type="text" id="EMail" placeholder="E-Mail">
     </div>
-    <div class="input-group">
+    <div class="input-group col-xs-3">
      <input class="form-control" type="text" id="FullName" placeholder="Full Name">
     </div>
-    <div class="input-group">
+    <div class="input-group col-xs-3">
      <span class="input-group-addon"><i class="glyphicon glyphicon-pencil"></i></span>
-     <div class="col-xs-2">
-      <input class="form-control" type="button" value="SignUp" onclick="signUp()">
-     </div>
+     <input class="form-control" type="button" value="SignUp" onclick="signUp()">
     </div>
    </div>
    <script type="text/javascript">
