--- a/Account/signUp.html
+++ b/Account/signUp.html
@@ -5,6 +5,17 @@
    <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.7/css/bootstrap.min.css">
    <script type="text/javascript" src="https://ajax.googleapis.com/ajax/libs/jquery/3.1.1/jquery.min.js"></script>
    <script type="text/javascript" src="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.7/js/boostrap.min.js"></script>
+   <script type="text/javsacript" src="https://www.gstatic.com/firebasejs/3.7.4/firebasejs"></script>
+   <script type="text/javascript">
+    var config = {
+     apiKey: "AIzaSyCQw517W-r1aBt_1n9dePGpXj-FgmyDSq8",
+     authDomain: "evergenco-93c31.firebaseapp.com",
+     databaseUrl: "https://evergenco-93c31.firebaseio.com",
+     projectId: "evergenco-93c31",
+     storageBucket: "evergenco-93c31.appspot.com",
+     messagingSenderId: "657664211832"
+    };
+   </script>
    <style>
     body{ font-family:Helvetica; }
     ul.il li{ display:inline;list-style-type:none; }
