--- a/Account/signUp.html
+++ b/Account/signUp.html
@@ -15,6 +15,7 @@
      storageBucket: "evergenco-93c31.appspot.com",
      messagingSenderId: "657664211832"
     };
+    firebase.initializeApp(config);
    </script>
    <style>
     body{ font-family:Helvetica; }
