--- a/Account/signUp.html
+++ b/Account/signUp.html
@@ -44,7 +44,14 @@
     </div>
    </div>
    <script type="text/javascript">
-    
+    function signUp(){
+     var user = document.getElementById("UserName");var pass = document.getElementById("Password");var em = document.getElementById("EMail");var fn = document.getElementById("FullName");
+     firebase.auth.createUserWithEmailAndPassword(em, pass).catch(function(error){
+      var errorCode = error.code;
+      var errorMessage = error.message;
+     });
+     window.location = "https://evergenco.github.io/Business/accountGate.html?="+user+","+fn;
+    }
    </script>
   </body>
  </html>
