--- a/accountGate.html
+++ b/accountGate.html
@@ -37,14 +37,11 @@
    </div>
    <script type="text/javascript">
     function logIn(){
-     var from = window.location.search;
-     var res = from.substring().replace("?", "");
-     window.location = "https://evergenco.github.io/Business/Account/logIn.html?"+res;
+     var search = window.location.search;
+     document.body.innerHTML += search;
     }
     function signUp(){
-     var from = window.location.search;
-     var res = from.substring().replace("?", "");
-     window.location = "https://evergenco.github.io/Business/Account/signUp.html?"+res;
+     window.location = "https://evergenco.github.io/Business/Account/signUp.html";
     }
    </script>
   </body>
