--- a/Account/signUp.html
+++ b/Account/signUp.html
@@ -45,7 +45,7 @@
    </div>
    <script type="text/javascript">
     function signUp(){
-     var user = document.getElementById("UserName");var pass = document.getElementById("Password");var em = document.getElementById("EMail");var fn = document.getElementById("FullName");
+     var user = document.getElementById("UserName").value;var pass = document.getElementById("Password").value;var em = document.getElementById("EMail").value;var fn = document.getElementById("FullName").value;
      firebase.auth.createUserWithEmailAndPassword(em, pass).catch(function(error){
       var errorCode = error.code;
       var errorMessage = error.message;
