--- a/Account/signUp.html
+++ b/Account/signUp.html
@@ -10,7 +10,7 @@
     var config = {
      apiKey: "AIzaSyCQw5l7W-r1aBt_1n9dePGpXj-FgmyDSq8",
      authDomain: "evergenco-93c31.firebaseapp.com",
-     databaseUrl: "https://evergenco-93c31.firebaseio.com",
+     databaseURL: "https://evergenco-93c31.firebaseio.com",
      projectId: "evergenco-93c31",
      storageBucket: "evergenco-93c31.appspot.com",
      messagingSenderId: "657664211832"
