--- a/Account/signUp.html
+++ b/Account/signUp.html
@@ -30,7 +30,7 @@
     </div>
     <div class="input-group col-xs-3">
      <span class="input-group-addon"><i class="glyphicon glyphicon-pencil"></i></span>
-     <input class="form-control" type="button" value="SignUp" onclick="signUp()">
+     <input class="form-control" type="button" value="SignUp" onclick="signUp">
     </div>
    </div>
    <script type="text/javascript">
