--- a/Account/signUp.html
+++ b/Account/signUp.html
@@ -34,7 +34,9 @@
     </div>
    </div>
    <script type="text/javascript">
-
+    function signUp(){
+     alert("Hello I Work");
+    }
    </script>
   </body>
  </html>
