--- a/Account/signUp.html
+++ b/Account/signUp.html
@@ -34,8 +34,13 @@
     </div>
    </div>
    <script type="text/javascript">
+    var email = document.getElementById("EMail").value;var pass = document.getElementById("Password").value;
     function signUp(){
-     alert("Hello I Work");
+     firebase.auth().createUserWithEmailAndPassword(email, pass).catch(function(error){
+      var errorCode = error.code;
+      var errorMessage = error.message;
+      alert(errorCode+": "+errorMessage);
+     });
     }
    </script>
   </body>
