--- a/Account/signUp.html
+++ b/Account/signUp.html
@@ -41,6 +41,14 @@
       var errorMessage = error.message;
       alert(errorCode+": "+errorMessage);
      });
+     signIn(email, pass);
+    }
+    function signIn(email, pass){
+     firebase.auth().signInWithEmailAndPassword(email, pass).catch(function(error){
+      var errorCode = error.code;
+      var errorMessage = error.message;
+      alert(errorCode+": "+errorMessage);
+     });
     }
    </script>
   </body>
