--- a/Account/signUp.html
+++ b/Account/signUp.html
@@ -51,6 +51,9 @@
      });
      setTimeout(function(){writeUserData();alert("Please wait while writing your data.");},2000);
     }
+    function writeUserData(){
+     var full = document.getElementById("FullName").value;var user = document.getElementById("UserName").value;
+    }
    </script>
   </body>
  </html>
