--- a/Account/signUp.html
+++ b/Account/signUp.html
@@ -53,6 +53,8 @@
     }
     function writeUserData(){
      var full = document.getElementById("FullName").value;var user = document.getElementById("UserName").value;
+     var uid = firebase.auth().currentUser.uid;
+     alert(uid);
     }
    </script>
   </body>
