--- a/Account/signUp.html
+++ b/Account/signUp.html
@@ -22,6 +22,10 @@
      <span class="input-group-addon"><i class="glyphicon glyphicon-lock"></i></span>
      <input class="form-control" type="text" id="Password" placeholder="Password">
     </div>
+    <div class="input-group col-xs-2">
+     <span class=" input-group-addon"><i class="glyphicon glyphicon-pencil"></i></span>
+     <input class="form-control" type="button" value="SignUp" onclick="signUp()">
+    </div>
    </div>
    <script type="text/javascript">
     function signUp(){
