--- a/Account/signUp.html
+++ b/Account/signUp.html
@@ -16,7 +16,7 @@
    <div id="divBody" align="center">
     <div class="input-group col-xs-3">
      <span class="input-group-addon"><i class="glyphicon glyphicon-user"></i></span>
-     <input class="form-control" type="text" id="EMail" placeholder="UserName">
+     <input class="form-control" type="text" id="EMail" placeholder="E-Mail">
     </div>
     <div class="input-group col-xs-3">
      <span class="input-group-addon"><i class="glyphicon glyphicon-lock"></i></span>
