--- a/index.html
+++ b/index.html
@@ -39,9 +39,9 @@
         <li class="dropdown">
          <a class="dropdown-toggle" data-toggle="dropdown" href="#">Finance<span class="caret" /></a>
          <ul class="dropdown-menu">
-          <li><a href="https://evergenco.github.io/Business/accountGate.html?=Banking">Banking</a></li>
-          <li><a href="https://evergenco.github.io/Business/accountGate.html?=Invest">Invetsing</a></li>
-          <li><a href="https://evergenco.github.io/Business/accountGate.html?=GenBase">GenBase</a></li>
+          <li><a href="https://evergenco.github.io/Business/accountGate.html?Banking">Banking</a></li>
+          <li><a href="https://evergenco.github.io/Business/accountGate.html?Invest">Invetsing</a></li>
+          <li><a href="https://evergenco.github.io/Business/accountGate.html?GenBase">GenBase</a></li>
          </ul>
         </li>
        </div>
