--- a/Account/logIn.html
+++ b/Account/logIn.html
@@ -1,7 +1,22 @@
 <DOCTYPE! html>
  <html>
   <head>
+   <title>Log In | EGC</title>
   </head>
-  <body>
+  <body onload="getData()">
+   <script type="text/javascript">
+    function getData(){
+     var data = window.location.search;
+     var res = data.replace("?", "");
+     if(res=="GenBase"){
+     }else{
+      if(res=="Banking"){
+      }else{
+       if(res=="Invest"){
+       }
+      }
+     }
+    }
+   </script>
   </body>
  </html>
