--- a/Account/logIn.html
+++ b/Account/logIn.html
@@ -9,10 +9,13 @@
      var data = window.location.search;
      var res = data.replace("?", "");
      if(res=="GenBase"){
+      window.location = "https://evergenco.github.io/Finance/gc.html";
      }else{
       if(res=="Banking"){
+       window.location = "https://evergenco.github.io/Finance/b.html";
       }else{
        if(res=="Invest"){
+        window.location = "https://evergenco.github.io/Finance/i.html";
        }
       }
      }
