--- a/index.html
+++ b/index.html
@@ -11,43 +11,14 @@
    </style>
   </head>
   <body>
-   <div class="jumbtron">
-    <div class="container">
-     <div class="page-header text-center">
-      <ul class="il">
-       <font size="12">
-        <li><font color="#00FFFF">Ever</font></li>
-        <li><font color="#FFAA00">Gen</font></li>
-        <li><font color="#00FF00">Co</font></li>
-       </font>
-      </ul>
-     </div>
-     <nav class="navbar navbar-default navbar-fixed-top">
-      <div class="container-fluid">
-       <div class="navbar-header">
-        <a class="navbar-brand" href="https://evergenco.github.io/Business">
-         <ul class="il">
-          <font size="8">
-           <li><font color="#00FFFF">Ever</font></li>
-           <li><font color="#FFAA00">Gen</font></li>
-           <li><font color="#00FF00">Co</font></li>
-          </font>
-         </ul>
-        </a>
-       </div>
-       <div class="nav navbar-nav">
-        <li class="dropdown">
-         <a class="dropdown-toggle" data-toggle="dropdown" href="#">Finance<span class="caret" /></a>
-         <ul class="dropdown-menu">
-          <li><a href="https://evergenco.github.io/Business/accountGate.html?Banking">Banking</a></li>
-          <li><a href="https://evergenco.github.io/Business/accountGate.html?Invest">Invetsing</a></li>
-          <li><a href="https://evergenco.github.io/Business/accountGate.html?GenBase">GenBase</a></li>
-         </ul>
-        </li>
-       </div>
-      </div>
-     </nav>
+   <div id="divBody">
+    <div class="input-group">
+     <input type="button" value="English" onclick="en()">
     </div>
    </div>
+   <script type="text/javascript">
+    var dBody = document.getElementById("divBody");
+    var enBody = '<div>';enBody += '<div class="jumbotron">';enBody += '<div class="container">';enBody ++ '<div class="page-header text-center">';enBody += '<ul class="il">';enBody += '<font size="12">';enBody += '<li><font color="#FFAA00">Ever</font></li>';enBody += '<li><font color="#00FFFF">Gen</font></li>';enBody += '<li><font color="#00FF00">Co</font></li>';enBody += '</font>';enBody += '</ul>';enBody += '<nav class="navbar navbar-default navbar-fixed-top">';enBody += '<div class="container-fluid">';enBody += '<div class="navbar-header">';enBody += '<a class="navbar-brand" href="https://evergenco.github.io/Business">';enBody += '<ul class="il">';enBody += '<font size="8">';enBody += '<li><font color="#00FFFF">Ever</font></li>';enBody += '<li><font color="#FFAA00">Gen</font></li>';enBody += '<li><font color="#00FF00">Co</font></li>';enBody += '</font>';enBody += '</ul>';enBody ++ '</a>';enBody += '</div>';enBody += '</div>';enBody += '</nav>';enBody += '</div>';enBody += '</div>';enBody += '</div>';enBody += '</div>';
+   </script>
   </body>
  </html>
