--- a/index.html
+++ b/index.html
@@ -11,7 +11,7 @@
    </style>
   </head>
   <body>
-   <div id="divBody">
+   <div id="divBody" align="center">
     <div class="input-group">
      <input type="button" value="English" onclick="en()">
     </div>
