--- a/index.html
+++ b/index.html
@@ -13,7 +13,7 @@
   <body>
    <div id="divBody" align="center">
     <div class="input-group">
-     <input type="button" value="English" onclick="en()">
+     <input type="button" class="form-control" value="English" onclick="en()">
     </div>
    </div>
    <script type="text/javascript">
