--- a/index.html
+++ b/index.html
@@ -12,8 +12,8 @@
   </head>
   <body>
    <div id="divBody" align="center">
-    <div class="input-group">
-     <span class="input-group-addon"><i class="glyphicon glypphhicon-triangle-right"></i></span>
+    <div class="input-group col-xs-3">
+     <span class="input-group-addon"><i class="glyphicon glyphicon-triangle-right"></i></span>
      <input type="button" class="form-control" value="English" onclick="en()">
     </div>
    </div>
