--- a/index.html
+++ b/index.html
@@ -18,9 +18,7 @@
     </div>
    </div>
    <script type="text/javascript">
-    var dBody = document.getElementById("divBody");
-    var enBody = '<div>';enBody += '<div class="jumbotron">';enBody += '<div class="container">';enBody ++ '<div class="page-header text-center">';enBody += '<ul class="il">';enBody += '<font size="12">';enBody += '<li><font color="#FFAA00">Ever</font></li>';enBody += '<li><font color="#00FFFF">Gen</font></li>';enBody += '<li><font color="#00FF00">Co</font></li>';enBody += '</font>';enBody += '</ul>';enBody += '<nav class="navbar navbar-default navbar-fixed-top">';enBody += '<div class="container-fluid">';enBody += '<div class="navbar-header">';enBody += '<a class="navbar-brand" href="https://evergenco.github.io/Business">';enBody += '<ul class="il">';enBody += '<font size="8">';enBody += '<li><font color="#00FFFF">Ever</font></li>';enBody += '<li><font color="#FFAA00">Gen</font></li>';enBody += '<li><font color="#00FF00">Co</font></li>';enBody += '</font>';enBody += '</ul>';enBody ++ '</a>';enBody += '</div>';enBody += '</div>';enBody += '</nav>';enBody += '</div>';enBody += '</div>';enBody += '</div>';enBody += '</div>';
-    function en(){ document.getElementById("divBody").innerHTML = enBody; }
+    function en(){ window.location="https://evergenco.github.io/Business/en"; }
    </script>
   </body>
  </html>
