--- a/en/index.html
+++ b/en/index.html
@@ -2,5 +2,15 @@
  <html>
   <head>
    <title>EverGenCo | EGC</title>
+   <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.7/css/bootstrap.min.css">
+   <script type="text/javascript" src="https://ajax.googleapis.com/ajax/libs/jquery/3.3.1/jquery.min.js"></script>
+   <script type="text/javascript" src="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.7/js/bootstrap.min.js"></script>
+   
+   <style>
+    body{ font-family:Helvetica; }
+    ul.il li{ display:inline;list-style-type:none; }
+   </style>
   </head>
+  <body>
+  </body>
  </html>
