--- a/en/index.html
+++ b/en/index.html
@@ -22,7 +22,7 @@
     </div>
     <nav class="navbar navbar-default navbar-fixed-top">
      <div class="container-fluid">
-      <div class="navbar-headder">
+      <div class="navbar-header">
        <a class="navbar-brand" href="https://evergenco.github.io/Business/en">EverGenCO | Official: English</a>
       </div>
      </div>
