--- a/en/index.html
+++ b/en/index.html
@@ -27,14 +27,16 @@
       </div>
      </div>
      <ul class="nav navbar-nav">
-      <li class="dropdown">
-       <a class="dropdown-toggle" data-toggle="dropdown" href="#">Financial</a>
-       <ul class="dropdown-menu">
-        <li><a href="https://evergenco.github.io/Business/en/accountGate.html?PayOut">PayOut</a></li>
-        <li><a href="https://evergenco.github.io/Business/en/accountGate.html?InVest">InVest</a></li>
-        <li><a href="https://evergenco.github.io/Business/en/accountGate.html?CoinCard">CoinCard</a></li>
-       </ul>
-      </li>
+      <div class="collapse navbar-collapse">
+       <li class="dropdown">
+        <a class="dropdown-toggle" data-toggle="dropdown" href="#">Financial</a>
+        <ul class="dropdown-menu">
+         <li><a href="https://evergenco.github.io/Business/en/accountGate.html?PayOut">PayOut</a></li>
+         <li><a href="https://evergenco.github.io/Business/en/accountGate.html?InVest">InVest</a></li>
+         <li><a href="https://evergenco.github.io/Business/en/accountGate.html?CoinCard">CoinCard</a></li>
+        </ul>
+       </li>
+      </div>
      </ul>
     </nav>
    </div>
