--- a/en/index.html
+++ b/en/index.html
@@ -27,16 +27,13 @@
       </div>
      </div>
      <ul class="nav navbar-nav">
-      <div class="collapse navbar-collapse">
-       <li class="dropdown">
-        <a class="dropdown-toggle" data-toggle="dropdown" href="#">Financial</a>
-        <ul class="dropdown-menu">
-         <li><a href="https://evergenco.github.io/Business/en/accountGate.html?PayOut">PayOut</a></li>
-         <li><a href="https://evergenco.github.io/Business/en/accountGate.html?InVest">InVest</a></li>
-         <li><a href="https://evergenco.github.io/Business/en/accountGate.html?CoinCard">CoinCard</a></li>
-        </ul>
-       </li>
-      </div>
+      <li class="dropdown">
+       <a class="dropdown-toggle" data-toggl="dropdown" href="#">Finance</a>
+       <ul class="dropdown-menu">
+        <li><p id="banking">Banking</p></li>
+        <li><p id="investing">Investing</p></li>
+       </ul>
+      </li>
      </ul>
     </nav>
    </div>
