--- a/en/index.html
+++ b/en/index.html
@@ -28,7 +28,7 @@
      </div>
      <ul class="nav navbar-nav">
       <li class="dropdown">
-       <a class="dropdown-toggle" data-toggl="dropdown" href="#">Finance</a>
+       <a class="dropdown-toggle" data-toggle="dropdown" href="#">Finance</a>
        <ul class="dropdown-menu">
         <li><p id="banking">Banking</p></li>
         <li><p id="investing">Investing</p></li>
