--- a/en/index.html
+++ b/en/index.html
@@ -38,5 +38,8 @@
     </nav>
    </div>
    <div id="divBody"></div>
+   <script type="text/javascript">
+    document.getElementById("banking").addEventListener("click", function(){window.location="https://evergenco.github.io/Business/en/bank.html";});
+   </script>
   </body>
  </html>
