--- a/en/index.html
+++ b/en/index.html
@@ -11,6 +11,7 @@
     body{ font-family:Helvetica; }
     .il li{ display:inline;list-style-type:none; }
     .innerJumbo{ background:"#00FFFF"; }
+    .jumbotron{ padding:320px; }
    </style>
   </head>
   <body>
